# llama-cpp-profiler

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md
.github/workflows/: ci.yml
docs/: profiling-strategy.md  schema.md
fixtures/: Apache-2.0.txt
src/: environment.rs  gguf.rs  lib.rs  main.rs  profile.rs  report.rs  runner.rs  telemetry.rs  ui.rs
