[package]
name = "llama-cpp-profiler"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Empirical llama.cpp GGUF profiler with agent-readable reports"
repository = "https://github.com/petipoua/llama-cpp-profiler"
readme = "README.md"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
crossterm = "0.28"
futures-util = "0.3"
libc = "0.2"
ratatui = "0.29"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sysinfo = "0.30"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }

[dev-dependencies]
tempfile = "3"
